Updated database file

--- a/web/templates/friends.html
+++ b/web/templates/friends.html
@@ -3,43 +3,49 @@
 {% block content %}
 <div class="span9">
 	<div class="hero-unit main-header">
-		<h2>Your status</h2>
-		{% if len(cubes) == 0 %}
-		You haven't registered any Smart-Cubes!
-		{% else %}
-		{% for cube in cubes %}
-		<div class="well">
-			Smart-Cube {{cube.code}}<br/>
-			{% if cube.corresponding_profile is None %}
-			There was no profile attached to this Smart-Cube when it was last updated.
-			{% if cube.profile is None %}
-			Attach a profile <a href="/settings">in the settings</a>.
-			{% else %}
-			Your current profile will come into effect on the next update.
-			{% end %}
-			{% else %}
-			You are {{ cube.corresponding_profile.describe_line }} {{ cube.corresponding_profile.sides[cube.rotation-1] }}.
-			<div class="pull-right" style="font-size: 10pt;">
-				Last Updated: {{str(cube.last_transition.hour) + ":" + str(cube.last_transition.minute)}}
-			</div>
-			{% end %}
-		</div>
-		{% end %}
-		{% end %}
+		<h2>Friends</h2>
+		View your current status and your the state of your friends
 	</div>
 	<div class="row-fluid">
 		<div class="span12">
+			<h3>Your Smart-Cubes</h3>
+			{% if len(cubes) == 0 %}
+			You haven't registered any Smart-Cubes!
+			{% else %}
+			{% for cube in cubes %}
+			<div class="well">
+				Smart-Cube {{cube.code}}<br/>
+				{% if cube.corresponding_profile is None %}
+				There was no profile attached to this Smart-Cube when it was last updated.
+				{% if cube.profile is None %}
+				Attach a profile <a href="/settings">in the settings</a>.
+				{% else %}
+				Your current profile will come into effect on the next update.
+				{% end %}
+				{% else %}
+				You are {{ cube.corresponding_profile.describe_line }} {{ cube.corresponding_profile.sides[cube.rotation-1] }}.
+				<div class="pull-right" style="font-size: 10pt;">
+					Last Updated: {{str(cube.last_transition.hour) + ":" + str(cube.last_transition.minute)}}
+				</div>
+				{% end %}
+			</div>
+			{% end %}
+			{% end %}
 			<h3>Friend Smart-Cubes</h3>
 			{% if len(friends) ==  0 %}
 			You have no friends!
 			{% else %}
 			{%for friend in friends %}
-			<div class="friend">{{friend.name}} is
+			<div class="friend well">
+				{{friend.name}} is
 				{% for cube in friend.cubes %}
 				{% if cube.corresponding_profile is None %}
 				<li>awaiting a cube update (Smart-Cube {{cube.code}})</li>
 				{% else %}
 				<div class="cube" cube_id="{{cube.cube_id}}">{{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}} (Smart-Cube {{cube.code}}) <a class='btn add-event push-right' data-toggle="modal" href="#event_create{{cube.cube_id}}">Add event</a>
+					<div class="pull-right" style="font-size: 10pt;">
+						Last Updated: {{str(cube.last_transition.hour) + ":" + str(cube.last_transition.minute)}}
+					</div>
 
 					<!-- Profile creation modal -->
 					<div id="event_create{{cube.cube_id}}" class="modal hide fade">
@@ -87,5 +93,5 @@
 {% end %}
 
 {% block js %}
-	<script src="{{	static_url("js/friends.js") }}"></script>
+<script src="{{	static_url("js/friends.js") }}"></script>
 {% end %}
