Adjusted about page

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -9,9 +9,20 @@
 	</div>
 	<div class="row-fluid">
 		<div class="span12">
+			<h3>What is a Smart-Cube?</h3>
 		    Smart-Cubes are versatile cubes which you can use to manage your time and let your friends know what you're doing.
 		    Smart-Cubes are physical objects that you keep on your desk. Each Smart-Cube can be in one of 6 states, denoted by which side is face up. Simply change state by rotating the Smart-Cube! <br/>
-		    The Smart-Cube will record how long was spent in each state and publish the information to this site. Using the Smart-Cube means you don't need to keep track of how long you've spent working on one project. Let the Smart-Cube keep track of it for you!
+			<h3>Why should I use it?</h3>
+			The Smart-Cube will record how long was spent in each state and publish the information to this site. Using the Smart-Cube means you don't need to keep track of how long you've spent working on one project. Let the Smart-Cube keep track of it for you!<br/>
+
+			Once registered, the Smart-Cube will start recording which state it is in. You can apply a profile to your Smart-Cube which tells it what each state means. This website will display your previous states and various statistics about them at your leisure.
+			<h3>Is that all it does?</h3>
+			The Smart-Cube sends generic information to this website. It can be extended and interpretted by a seperate application very easily. Some example uses are:<br/>
+			<ul>
+				<li>A device to choose your music genre</li>
+				<li>A monitoring device for meeting rooms</li>
+				<li>And many more... It's up to you!</li>
+			</ul>
 		</div>
 	</div>
     </div>
