--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -17,7 +17,7 @@
 					You have no registered Smart-Cubes!
 					{% else %}
 					{% for cube in cubes %}
-					<div class="cube" cube_id="{{cube.cube_id}}">
+					<div class="cube" cube_code="{{cube.code}}">
 						<strong>Smart-Cube {{ cube.code }}</strong><br/>
 						<div class="active_profile">
 							Active Profile: 
