--- a/web/templates/stats.html
+++ b/web/templates/stats.html
@@ -19,7 +19,7 @@
 	<span>You have no data from your Smart-Cubes!</span>
 	{% end %}
 	{% for cube in cubes %}
-	<div class="cube" cube_id="{{cube.cube_id}}">
+	<div class="cube" cube_code="{{cube.code}}">
 		<h3>Smart-Cube {{ cube.code }}</h3>
 		<h4>Profile
 			<div class="btn-group">
