--- a/web/templates/friends.html
+++ b/web/templates/friends.html
@@ -25,7 +25,7 @@
 				{% else %}
 				You are {{ cube.corresponding_profile.describe_line }} {{ cube.corresponding_profile.sides[cube.rotation-1] }}.
 				<div class="pull-right" style="font-size: 10pt;">
-					Last Updated: {{str(cube.last_transition.hour) + ":" + str(cube.last_transition.minute)}}
+					Last Updated: {%if cube.last_transition.hour<10%}0{%end%}{{str(cube.last_transition.hour)}}:{%if cube.last_transition.minute<10%}0{%end%}{{str(cube.last_transition.minute)}}
 				</div>
 				{% end %}
 			</div>
@@ -52,7 +52,7 @@
 				{% else %}
 				<div class="cube" cube_code="{{cube.code}}">{{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}} (Smart-Cube {{cube.code}}) <a class='btn add-event push-right' data-toggle="modal" href="#event_create{{cube.cube_id}}">Add event</a>
 					<div class="pull-right" style="font-size: 10pt;">
-						Last Updated: {{str(cube.last_transition.hour) + ":" + str(cube.last_transition.minute)}}
+						Last Updated: {%if cube.last_transition.hour<10%}0{%end%}{{str(cube.last_transition.hour)}}:{%if cube.last_transition.minute<10%}0{%end%}{{str(cube.last_transition.minute)}}
 					</div>
 
 					<!-- Profile creation modal -->
