Removed email option from notifications

--- a/web/templates/friends.html
+++ b/web/templates/friends.html
@@ -78,7 +78,7 @@
 								<div class="controls">
 									<select id="action_select" profile_id="{{cube.profile.profile_id}}">
 										<option value="flashLED">Flash Smart-Cube LED</option>
-										<option value="email">Email me a notification</option>
+										<!-- 	<option value="email">Email me a notification</option> -->
 										<option value="sound">Play notification sound</option>
 									</select>
 								</div>
