--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -108,14 +108,14 @@
 			<a class="btn" data-toggle="collapse" data-target=".account-collapse" style="margin-bottom: 20px;">Account</a>
 			<div class="collapse account-collapse">
 				<div class="well">
-					Account!
+					You have logged in with Google.
 				</div>
 			</div>
 		</div>
 
 		<!-- Profile creation modal -->
 		<div id="profile_create" class="modal hide fade">
-			<form class="form-horizontal" method="post" action="/settings/profile" >
+			<form class="form-horizontal">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					<h3>Create a profile</h3>
@@ -173,7 +173,7 @@
 				</div>
 				<div class="modal-footer">
 					<button href="#" class="btn" data-action="dismiss">Close</a>
-					<button href="#" type="submit" class="btn btn-primary">Save changes</a>
+					<button href="#" class="btn btn-primary">Save changes</a>
 				</div>
 			</form>
 		</div>	
