--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -115,7 +115,7 @@
 
 		<!-- Profile creation modal -->
 		<div id="profile_create" class="modal hide fade">
-			<form class="form-horizontal">
+			<div class="form-horizontal">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					<h3>Create a profile</h3>
@@ -172,10 +172,10 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button href="#" class="btn" data-action="dismiss">Close</a>
-					<button href="#" class="btn btn-primary">Save changes</a>
+					<button href="#" class="btn" data-dismiss="modal">Close</a>
+					<button href="#" class="btn btn-primary" data-dismiss="modal">Save changes</a>
 				</div>
-			</form>
+			</div>
 		</div>	
 	</div>
 </div>
