Added blurb about tag lines

--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -121,7 +121,7 @@
 					<h3>Create a profile</h3>
 				</div>
 				<div class="modal-body">
-					<p>A profile is used to interpret what your Smart-Cube means.</p>
+					<p>A profile is used to interpret what your Smart-Cube means.<br/>The tag line is used in a sentence the form of: User is [tag-line] [side]. e.g. Ben is currently working. </p>
 					<div class="control-group">
 						<label class="control-label" for="p_name">Profile name</label>
 						<div class="controls">
