--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,7 +13,11 @@
 				We have no public Smart-Cubes to display at the moment - Help us out and <a href="/settings">make one of your Smart-Cubes public!</a>
 			{% else %}
 				{% for cube in public_cubes %}
+					{% if cube.corresponding_profile is not None %}
 					<span>Smart-Cube {{cube.code}} is {{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}}</span><br/>
+					{% else %}
+					<span>Smart-Cube {{cube.code}} hasn't updated yet
+					{% end %}
 				{% end %}
 			{% end %}
 			<p><br/><a class="btn" href="/about">What are public cubes?</a><div>
