Added last updated to public cubes

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,18 @@
 			{% else %}
 				{% for cube in public_cubes %}
 					{% if cube.corresponding_profile is not None %}
-					<span>Smart-Cube {{cube.code}}: {{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}}</span><br/>
+					<span>Smart-Cube {{cube.code}}: {{cube.corresponding_profile.describe_line}} {{cube.corresponding_profile.sides[ cube.rotation-1 ]}}</span>
+				<div class="pull-right" style="font-size: 10pt;">
+					Last Updated: <span class="cube_time" title="{{cube.last_transition.strftime('%A, %d %B at %H:%M')}}">
+					{% if (datetime.datetime.now() - cube.last_transition).days > 1 %} 
+						{{ (datetime.datetime.now() - cube.last_transition).days }} days ago
+					{% elif (datetime.datetime.now() - cube.last_transition).seconds > 3600 %}
+						{{ int((datetime.datetime.now() - cube.last_transition).seconds / 3600) }} hours ago
+					{% else %}
+						{{ int((datetime.datetime.now() - cube.last_transition).seconds / 60) }} minutes ago
+					{% end %}
+					</span>	
+				</div>
 					{% else %}
 					<span>Smart-Cube {{cube.code}} hasn't updated yet
 					{% end %}
