--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -25,7 +25,7 @@
 						{{ int((datetime.datetime.now() - cube.last_transition).seconds / 60) }} minutes ago
 					{% end %}
 					</span>	
-				</div>
+				</div><br/>
 					{% else %}
 					<span>Smart-Cube {{cube.code}} hasn't updated yet
 					{% end %}
